[gd_scene load_steps=34 format=3 uid="uid://lf8wbuogecoi"]

[ext_resource type="Texture2D" uid="uid://yd3uv4y70rl3" path="res://Units/Sprites/MiniSpearMan.png" id="1_0r52t"]
[ext_resource type="Script" uid="uid://cvm4acsopobp6" path="res://Units/Scripts/Unit.gd" id="1_7wytu"]
[ext_resource type="Script" uid="uid://cum56523juua8" path="res://Units/Scripts/StateMachine.gd" id="3_r3f3s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjl3l"]
atlas = ExtResource("1_0r52t")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikoli"]
atlas = ExtResource("1_0r52t")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k46by"]
atlas = ExtResource("1_0r52t")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6hc7"]
atlas = ExtResource("1_0r52t")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2yex"]
atlas = ExtResource("1_0r52t")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0n82"]
atlas = ExtResource("1_0r52t")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itmwl"]
atlas = ExtResource("1_0r52t")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3jwn"]
atlas = ExtResource("1_0r52t")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw8b0"]
atlas = ExtResource("1_0r52t")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jsq5"]
atlas = ExtResource("1_0r52t")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f00ki"]
atlas = ExtResource("1_0r52t")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn767"]
atlas = ExtResource("1_0r52t")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqqfh"]
atlas = ExtResource("1_0r52t")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5xwy"]
atlas = ExtResource("1_0r52t")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me7gl"]
atlas = ExtResource("1_0r52t")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqlnf"]
atlas = ExtResource("1_0r52t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa524"]
atlas = ExtResource("1_0r52t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqku5"]
atlas = ExtResource("1_0r52t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_appqu"]
atlas = ExtResource("1_0r52t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf2p5"]
atlas = ExtResource("1_0r52t")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlt4j"]
atlas = ExtResource("1_0r52t")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp300"]
atlas = ExtResource("1_0r52t")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dcda"]
atlas = ExtResource("1_0r52t")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipap1"]
atlas = ExtResource("1_0r52t")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg3ic"]
atlas = ExtResource("1_0r52t")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjl3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjl3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikoli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6hc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2yex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0n82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itmwl")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3jwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw8b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jsq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f00ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn767")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqqfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5xwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me7gl")
}],
"loop": true,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqlnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa524")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqku5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_appqu")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf2p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlt4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp300")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dcda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipap1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg3ic")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wytu"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvaes"]
size = Vector2(19, 14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wytu"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rqvx"]
bg_color = Color(0, 0.652862, 0.256558, 1)

[node name="Unit" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_7wytu")
move_speed = 30.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_pjl3l")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_7wytu")

[node name="DetectionZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(5, -7)
shape = SubResource("RectangleShape2D_lvaes")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -19.0
offset_right = 72.0
offset_bottom = -9.0
scale = Vector2(0.2, 0.2)
theme_override_styles/background = SubResource("StyleBoxFlat_7wytu")
theme_override_styles/fill = SubResource("StyleBoxFlat_5rqvx")
min_value = 100.0
step = 0.001
value = 100.0
show_percentage = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_r3f3s")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
